--- a/ActividadGuiada2.ipynb
+++ b/ActividadGuiada2.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08d8d8ca",
+   "id": "ea3cbc9d",
    "metadata": {},
    "source": [
     "# Actividad Guiada 2\n",
     "#Fabian Enrique Hooker Cruz\n",
     "\n",
-    "#GitHub "
+    "#GitHub  https://github.com/fabianhooker/Actividad_Guiada2.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7dc2184",
+   "id": "f8bbddbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1025b9c",
+   "id": "1b51e430",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec1bf70",
+   "id": "6ecb0da2",
    "metadata": {},
    "source": [
     "# problema 2 \n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "68fe040e",
+   "id": "fe59d87d",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0f8c21",
+   "id": "8d6a6b65",
    "metadata": {},
    "outputs": [],
    "source": []
